# ArchDex

./: .gitignore  PKGBUILD  README.md  launch.sh  pyproject.toml  requirements.txt
plans/: packaging.md
src/: config.py  main.py  utils.py
src/data/: api.py  database.py  models.py
src/hyprland/: notifications.py  theme.py
src/ui/: detail_view.py  home_page.py  main_window.py
tests/: test_robust_update.py
